--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,9 @@
 .container, body, html{
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
+    background: #414042 !important;
+    color: #ffffff;
 }
 .mainpage{
     padding: 200px 0px;
