--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
-.container, body, html{
+.page{
     width: 100%;
     height: 100%;
-    scroll-behavior: smooth;
-    background: #414042 !important;
     color: #ffffff;
     padding: 100px 0px 100px 0px ;
+}
+body,html{
+    scroll-behavior: smooth;
+    background: #414042 !important;
 }
 /* Navbar */
 .navbar{
