--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,12 @@
+#{
+    box-sizing: border-box;
+}
+.downarrow{
+    text-align: center;
+    margin-top:0.9%;
+    margin-bottom:3%;
+}
+
 .page{
     width: 100%;
     height: 100%;
@@ -7,6 +16,19 @@
 body,html{
     scroll-behavior: smooth;
     background: #414042 !important;
+    width: 100%;
+    height: 100%;
+    color: #ffffff;
+}
+.desc1
+{
+   text-align: center;
+margin-bottom:2%;
+}
+
+.spef
+{
+    border:2px solid #f15a22;
 }
 /* Navbar */
 .navbar{
@@ -41,4 +63,49 @@ footer .btn:hover{
 }
  span{
     color: #ed1d24;
+}
+
+#why,#what,#who,#how,.mainpage,#where,#partners,#innovations
+{
+    width:100%;
+    height:100%;
+    margin-bottom: 2%;
+    color: #ffffff;
+}
+
+.dest
+{
+    margin:0!important;
+}
+
+
+.row
+{
+    margin-left: 0px!important;
+    margin-right: 0px!important;
+}
+
+.metrics
+{
+    margin-top:6%;
+}
+
+ i {
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 8px;
+}
+
+.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+.img1
+{
+
+margin-top:10%;
+margin-bottom:0.2%;
+
 }
