--- a/forge/4.css
+++ b/forge/4.css
@@ -57,7 +57,8 @@ html,.bgc
 
 .value_prop
 {
-	text-align: center;
+	text-align: justify;
+    text-justify: inter-word;
 	margin-top: 10%;
   font-size:2.3vh;
 }
